--- a/dapp/src/index.html
+++ b/dapp/src/index.html
@@ -87,6 +87,10 @@
     <script src="./controllers/accountCtrl.js"></script>
     <script src="./controllers/footerCtrl.js"></script>
     <script src="./controllers/addressBookCtrl.js"></script>
+
+    <!-- Utilities -->
+    <script src="./bundles/js/ethereumjs-util.js"></script>
+
     <script>
       if (isElectron && window.module) {
         module = window.module;
@@ -145,17 +149,17 @@
                </ul>
               </li>
               <li ng-show="loggedIn">
-                <p class="navbar-text" ng-show="balance"> Balance: {{balance|ether}} </p>
+                <p class="navbar-text" ng-show="balance"> Balance: {{balance|ether:ethereumChain.chain}} </p>
               </li>
               <li ng-show="loggedIn">
                 <p class="navbar-text" ng-show="nonce"> Nonce: {{nonce}} </p>
               </li>
               <li>
-                <span class="navbar-text">{{ethereumChain.chain.substr(0, 1).toUpperCase() + ethereumChain.chain.substr(1)}}</span>
+                <span class="navbar-text">{{ethereumChain.name}}</span>
                 <span class="navbar-text" ng-bind-html="statusIcon"></span>
               </li>
               <li ng-show="web3ProviderName === 'injected' && metamaskInjected && !loggedIn">
-                <a hef="#" ng-click="openMetamaskWidget()">Unlock Metamask</a>
+                <a hef="#" ng-click="openMetamaskWidget()">Unlock Metamask/Nifty</a>
               </li>
             </ul>
         </div>
